syntax = "proto3";

package containerd.services.events.v1;

option go_package = "github.com/containerd/containerd/api/services/events/v1;events";

message TaskCreate {
	string container_id = 1;
}

message TaskStart {
	string container_id = 1;
}

message TaskDelete {
	string container_id = 1;
	uint32 pid = 2;
	uint32 exit_status = 3;
}
